[package]
name = "libavif"
version = "0.1.0"
authors = ["Charles Samuels <ks@ks.ax>"]
edition = "2018"
description="High-level API for AVIF image files"
keywords=["codec", "image","avif", "AV1"]
repository="https://github.com/njaard/libavif"
documentation="https://docs.rs/libavif"
license="BSD-2-Clause"

[dependencies]
libavif-sys={version="0.4",path= "libavif-sys" }

[dev-dependencies]
image="*"

