[package]
name = "libavif"
version = "0.12.0"
authors = ["Charles Samuels <ks@ks.ax>", "Paolo Barbolini <paolo@paolo565.org>"]
edition = "2021"
rust-version = "1.63"
description="High-level API for AVIF image files"
keywords=["codec", "image","avif", "AV1"]
repository="https://github.com/njaard/libavif-rs"
documentation="https://docs.rs/libavif"
license="BSD-2-Clause"
readme = "README.md"

[dependencies]
libavif-sys = { version = "0.15.0", path = "libavif-sys", default-features = false }

[dev-dependencies]
image = "0.24"

[features]
default = ["codec-dav1d", "codec-rav1e"]
codec-rav1e = ["libavif-sys/codec-rav1e"]
codec-dav1d = ["libavif-sys/codec-dav1d"]
codec-aom = ["libavif-sys/codec-aom"]

[profile.dev]
opt-level = 2

[package.metadata.docs.rs]
no-default-features = true

[workspace]
members = [
  "libavif-image",
  "libavif-sys",
  "libaom-sys",
  "libdav1d-sys",
]
