[package]
name = "libaom-sys"
version = "0.5.1"
authors = ["Charles Samuels <ks@ks.ax>", "Paolo Barbolini <paolo@paolo565.org>", "Kornel <kornel@geekhood.net>"]
edition = "2018"
build = "build.rs"
links = "aom"
description="Builds and statically links libaom. Part of libavif-sys"
keywords=["ffi","codec", "aom", "avif", "AV1"]
repository="https://github.com/njaard/libavif-rs"
documentation="https://docs.rs/libavif-sys"
license="BSD-2-Clause"

[build-dependencies]
cmake = "0.1"
