[package]
name = "libaom-sys"
version = "0.15.0"
authors = ["Charles Samuels <ks@ks.ax>", "Paolo Barbolini <paolo@paolo565.org>", "Kornel <kornel@geekhood.net>"]
edition = "2018"
build = "build.rs"
links = "aom"
description="Builds and statically links libaom. Part of libavif-sys"
keywords=["ffi","codec", "aom", "avif", "AV1"]
repository="https://github.com/njaard/libavif-rs"
documentation="https://docs.rs/libavif-sys"
license="BSD-2-Clause"
exclude = ["/vendor/third_party/googletest/", "/vendor/test/*.cc", "/vendor/test/*.h", "/vendor/doc/", "/vendor/examples/", "*.dox"]

[build-dependencies]
cmake = "0.1"
