[package]
name = "libavif-image"
version = "0.1.1"
authors = ["Charles Samuels <ks@ks.ax>"]
edition = "2018"
description="Load AVIF files into the `image` crate"
keywords=["codec", "image", "avif", "AV1"]
repository="https://github.com/njaard/libavif"
documentation="https://docs.rs/libavif-image"
license="BSD-2-Clause"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.23"
libavif={version="0.1", path=".."}
