[package]
name = "libavif-image"
version = "0.11.0"
authors = ["Charles Samuels <ks@ks.ax>", "Paolo Barbolini <paolo@paolo565.org>"]
edition = "2021"
rust-version = "1.63"
description="Load AVIF files into the `image` crate"
keywords=["codec", "image", "avif", "AV1"]
repository="https://github.com/njaard/libavif-rs"
documentation="https://docs.rs/libavif-image"
license="BSD-2-Clause"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24", default-features = false }
libavif = { version = "0.12.0", path = "..", default-features = false }

[dev-dependencies]
image = { version = "0.24", default-features = false, features = ["jpeg"] }

[features]
default = ["codec-dav1d", "codec-rav1e"]
codec-rav1e = ["libavif/codec-rav1e"]
codec-dav1d = ["libavif/codec-dav1d"]
codec-aom = ["libavif/codec-aom"]

[package.metadata.docs.rs]
no-default-features = true

