[package]
name = "libavif-sys"
version = "0.5.0"
authors = ["Charles Samuels <ks@ks.ax>", "Paolo Barbolini <paolo@paolo565.org>"]
edition = "2018"
build = "build.rs"
description="Unsafe wrapper around libavif, the image codec"
keywords=["ffi","codec", "image", "avif", "AV1"]
repository="https://github.com/njaard/libavif-rs"
documentation="https://docs.rs/libavif-sys"
license="BSD-2-Clause"
readme = "README.md"

[features]
default = ["codec-dav1d", "codec-rav1e"]
codec-rav1e = ["rav1e","nasm-rs"]
codec-dav1d = []
codec-aom = ["libaom-sys"]

[dependencies]
libc = "0.2"
rav1e = { version = "=0.3.3", default-features = false, features = ["asm", "capi"], optional = true }
nasm-rs = { version = "=0.1.7", optional = true }
libaom-sys = { version = "0.6", path = "../libaom-sys", optional = true }

[build-dependencies]
cmake = "0.1"

[package.metadata.docs.rs]
no-default-features = true
features = ["codec-aom"]
