[package]
name = "libavif-sys"
version = "0.12.1"
authors = ["Charles Samuels <ks@ks.ax>", "Paolo Barbolini <paolo@paolo565.org>"]
edition = "2018"
build = "build.rs"
description="Unsafe wrapper around libavif, the image codec"
keywords=["ffi", "codec", "image", "avif", "AV1"]
repository="https://github.com/njaard/libavif-rs"
documentation="https://docs.rs/libavif-sys"
license="BSD-2-Clause"
readme = "README.md"
exclude = ["/libavif/tests/", "/libavif/ext/", "/libavif/examples/", ".github"]

[features]
default = ["codec-dav1d", "codec-rav1e"]
codec-rav1e = ["rav1e"]
codec-dav1d = ["libdav1d-sys"]
codec-aom = ["libaom-sys"]

[dependencies]
libc = "0.2"
rav1e = { version = "0.5.0", default-features = false, features = ["asm", "capi"], optional = true }
libaom-sys = { version = "0.11", path = "../libaom-sys", optional = true }
libdav1d-sys = { version = "0.4", path = "../libdav1d-sys", optional = true }

[build-dependencies]
cmake = "0.1"

[package.metadata.docs.rs]
no-default-features = true

