[package]
name = "libdav1d-sys"
version = "0.6.0"
authors = ["Charles Samuels <ks@ks.ax>", "Paolo Barbolini <paolo@paolo565.org>", "Kornel <kornel@geekhood.net>"]
edition = "2021"
build = "build.rs"
links = "dav1d"
description="Builds and statically links dav1d AV1 decoder. Part of libavif-sys"
keywords=["ffi", "codec", "dav1d", "david", "AV1"]
repository="https://github.com/njaard/libavif-rs"
documentation="https://docs.rs/libavif-sys"
license="BSD-2-Clause"

[dependencies]
libc = "0.2"
